friday/src/main/java/com/friday/frontend/FridayParser.java
// Generated from FridayParser.g4 by ANTLR 4.13.2
package com.friday.frontend;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FridayParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INLINE_COMMENT=1, COMMENT=2, SPACE=3, PRIVATE=4, PUBLIC=5, STRUCT=6, RETURN=7, 
		PRINT=8, FN=9, FOR=10, WHILE=11, DEFER=12, NATIVE=13, NAMESPACE=14, ENUM=15, 
		USING=16, CONST=17, LET=18, NEW=19, IF=20, ELIF=21, ELSE=22, AS=23, SIZEOF=24, 
		ALIGNOF=25, WHERE=26, BOOL_LIT=27, NULL_LIT=28, INT_LIT=29, FLOAT_LIT=30, 
		STRING_LIT=31, CHAR_LIT=32, LEFT_PAREN=33, LEFT_SQUARE=34, LEFT_CURLY=35, 
		RIGHT_PAREN=36, RIGHT_SQUARE=37, RIGHT_CURLY=38, SEMI=39, COL=40, COMMA=41, 
		ARROW=42, FAT_ARROW=43, COLCOL=44, INCREMENT=45, DECREMENT=46, PLUS=47, 
		MINUS=48, STAR=49, SLASH=50, MODULO=51, LSHIFT=52, RSHIFT=53, AMPERSAND=54, 
		PIPELINE=55, LESS=56, GREATER=57, LESS_EQ=58, GREATER_EQ=59, EQUALS=60, 
		NOT_EQUALS=61, ASSIGN=62, PLUS_ASSIGN=63, MINUS_ASSIGN=64, STAR_ASSIGN=65, 
		SLASH_ASSIGN=66, MODULO_ASSIGN=67, LSHIFT_ASSIGN=68, RSHIFT_ASSIGN=69, 
		AMPERSAND_ASSIGN=70, PIPELINE_ASSIGN=71, DOTDOT=72, DOTDOTEQ=73, TILDE=74, 
		DOT=75, AND=76, OR=77, NOT=78, OPERATOR_IDENTIFIER=79, IDENTIFIER=80;
	public static final int
		RULE_translationUnit = 0, RULE_topLevelStatement = 1, RULE_namespaceStatement = 2, 
		RULE_usingStatement = 3, RULE_functionStatement = 4, RULE_enumStatement = 5, 
		RULE_structStatement = 6, RULE_statement = 7, RULE_syntacticalScope = 8, 
		RULE_functionScope = 9, RULE_lambdaScope = 10, RULE_expression = 11, RULE_type = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"translationUnit", "topLevelStatement", "namespaceStatement", "usingStatement", 
			"functionStatement", "enumStatement", "structStatement", "statement", 
			"syntacticalScope", "functionScope", "lambdaScope", "expression", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'private'", "'public'", "'struct'", "'return'", 
			"'print'", "'fn'", "'for'", "'while'", "'defer'", "'native'", "'namespace'", 
			"'enum'", "'using'", "'const'", "'let'", "'new'", "'if'", "'elif'", "'else'", 
			"'as'", "'sizeof'", "'alignof'", "'where'", null, "'null'", null, null, 
			null, null, "'('", "'['", "'{'", "')'", "']'", "'}'", "';'", "':'", "','", 
			"'->'", "'=>'", "'::'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'<<'", "'>>'", "'&'", "'|'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
			"'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'<<='", "'>>='", "'&='", 
			"'|='", "'..'", "'..='", "'~'", "'.'", "'&&'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INLINE_COMMENT", "COMMENT", "SPACE", "PRIVATE", "PUBLIC", "STRUCT", 
			"RETURN", "PRINT", "FN", "FOR", "WHILE", "DEFER", "NATIVE", "NAMESPACE", 
			"ENUM", "USING", "CONST", "LET", "NEW", "IF", "ELIF", "ELSE", "AS", "SIZEOF", 
			"ALIGNOF", "WHERE", "BOOL_LIT", "NULL_LIT", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
			"CHAR_LIT", "LEFT_PAREN", "LEFT_SQUARE", "LEFT_CURLY", "RIGHT_PAREN", 
			"RIGHT_SQUARE", "RIGHT_CURLY", "SEMI", "COL", "COMMA", "ARROW", "FAT_ARROW", 
			"COLCOL", "INCREMENT", "DECREMENT", "PLUS", "MINUS", "STAR", "SLASH", 
			"MODULO", "LSHIFT", "RSHIFT", "AMPERSAND", "PIPELINE", "LESS", "GREATER", 
			"LESS_EQ", "GREATER_EQ", "EQUALS", "NOT_EQUALS", "ASSIGN", "PLUS_ASSIGN", 
			"MINUS_ASSIGN", "STAR_ASSIGN", "SLASH_ASSIGN", "MODULO_ASSIGN", "LSHIFT_ASSIGN", 
			"RSHIFT_ASSIGN", "AMPERSAND_ASSIGN", "PIPELINE_ASSIGN", "DOTDOT", "DOTDOTEQ", 
			"TILDE", "DOT", "AND", "OR", "NOT", "OPERATOR_IDENTIFIER", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FridayParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FridayParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TranslationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FridayParser.EOF, 0); }
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitTranslationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 123504L) != 0)) {
				{
				{
				setState(26);
				topLevelStatement();
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelStatementContext extends ParserRuleContext {
		public UsingStatementContext usingStatement() {
			return getRuleContext(UsingStatementContext.class,0);
		}
		public NamespaceStatementContext namespaceStatement() {
			return getRuleContext(NamespaceStatementContext.class,0);
		}
		public StructStatementContext structStatement() {
			return getRuleContext(StructStatementContext.class,0);
		}
		public EnumStatementContext enumStatement() {
			return getRuleContext(EnumStatementContext.class,0);
		}
		public FunctionStatementContext functionStatement() {
			return getRuleContext(FunctionStatementContext.class,0);
		}
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitTopLevelStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelStatementContext topLevelStatement() throws RecognitionException {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStatement);
		try {
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				usingStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				namespaceStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(36);
				structStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(37);
				enumStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(38);
				functionStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamespaceStatementContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public List<Token> names = new ArrayList<Token>();
		public TerminalNode NAMESPACE() { return getToken(FridayParser.NAMESPACE, 0); }
		public TerminalNode SEMI() { return getToken(FridayParser.SEMI, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(FridayParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FridayParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(FridayParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(FridayParser.DOT, i);
		}
		public NamespaceStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitNamespaceStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceStatementContext namespaceStatement() throws RecognitionException {
		NamespaceStatementContext _localctx = new NamespaceStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_namespaceStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(NAMESPACE);
			setState(42);
			((NamespaceStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			((NamespaceStatementContext)_localctx).names.add(((NamespaceStatementContext)_localctx).IDENTIFIER);
			setState(47);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(43);
					match(DOT);
					setState(44);
					((NamespaceStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					((NamespaceStatementContext)_localctx).names.add(((NamespaceStatementContext)_localctx).IDENTIFIER);
					}
					} 
				}
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(50);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UsingStatementContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public List<Token> names = new ArrayList<Token>();
		public TerminalNode USING() { return getToken(FridayParser.USING, 0); }
		public TerminalNode SEMI() { return getToken(FridayParser.SEMI, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(FridayParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FridayParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(FridayParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(FridayParser.DOT, i);
		}
		public UsingStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usingStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitUsingStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsingStatementContext usingStatement() throws RecognitionException {
		UsingStatementContext _localctx = new UsingStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_usingStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(USING);
			setState(53);
			((UsingStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			((UsingStatementContext)_localctx).names.add(((UsingStatementContext)_localctx).IDENTIFIER);
			setState(58);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(54);
					match(DOT);
					setState(55);
					((UsingStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					((UsingStatementContext)_localctx).names.add(((UsingStatementContext)_localctx).IDENTIFIER);
					}
					} 
				}
				setState(60);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(61);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionStatementContext extends ParserRuleContext {
		public FunctionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionStatement; }
	 
		public FunctionStatementContext() { }
		public void copyFrom(FunctionStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NativeFunctionStatementContext extends FunctionStatementContext {
		public Token accessModifier;
		public Token name;
		public Token IDENTIFIER;
		public List<Token> paramsNames = new ArrayList<Token>();
		public TypeContext type;
		public List<TypeContext> paramsTypes = new ArrayList<TypeContext>();
		public TypeContext returnType;
		public TerminalNode NATIVE() { return getToken(FridayParser.NATIVE, 0); }
		public TerminalNode FN() { return getToken(FridayParser.FN, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(FridayParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(FridayParser.RIGHT_PAREN, 0); }
		public TerminalNode ARROW() { return getToken(FridayParser.ARROW, 0); }
		public TerminalNode SEMI() { return getToken(FridayParser.SEMI, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(FridayParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FridayParser.IDENTIFIER, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COL() { return getTokens(FridayParser.COL); }
		public TerminalNode COL(int i) {
			return getToken(FridayParser.COL, i);
		}
		public TerminalNode PRIVATE() { return getToken(FridayParser.PRIVATE, 0); }
		public TerminalNode PUBLIC() { return getToken(FridayParser.PUBLIC, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FridayParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FridayParser.COMMA, i);
		}
		public NativeFunctionStatementContext(FunctionStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitNativeFunctionStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FreeFunctionStatementContext extends FunctionStatementContext {
		public Token accessModifier;
		public Token name;
		public Token IDENTIFIER;
		public List<Token> paramsNames = new ArrayList<Token>();
		public TypeContext type;
		public List<TypeContext> paramsTypes = new ArrayList<TypeContext>();
		public TypeContext returnType;
		public FunctionScopeContext block;
		public TerminalNode FN() { return getToken(FridayParser.FN, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(FridayParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(FridayParser.RIGHT_PAREN, 0); }
		public TerminalNode ARROW() { return getToken(FridayParser.ARROW, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public FunctionScopeContext functionScope() {
			return getRuleContext(FunctionScopeContext.class,0);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(FridayParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FridayParser.IDENTIFIER, i);
		}
		public TerminalNode OPERATOR_IDENTIFIER() { return getToken(FridayParser.OPERATOR_IDENTIFIER, 0); }
		public List<TerminalNode> COL() { return getTokens(FridayParser.COL); }
		public TerminalNode COL(int i) {
			return getToken(FridayParser.COL, i);
		}
		public TerminalNode PRIVATE() { return getToken(FridayParser.PRIVATE, 0); }
		public TerminalNode PUBLIC() { return getToken(FridayParser.PUBLIC, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FridayParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FridayParser.COMMA, i);
		}
		public FreeFunctionStatementContext(FunctionStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitFreeFunctionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionStatementContext functionStatement() throws RecognitionException {
		FunctionStatementContext _localctx = new FunctionStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionStatement);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new FreeFunctionStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PRIVATE || _la==PUBLIC) {
					{
					setState(63);
					((FreeFunctionStatementContext)_localctx).accessModifier = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==PRIVATE || _la==PUBLIC) ) {
						((FreeFunctionStatementContext)_localctx).accessModifier = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(66);
				match(FN);
				setState(67);
				((FreeFunctionStatementContext)_localctx).name = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==OPERATOR_IDENTIFIER || _la==IDENTIFIER) ) {
					((FreeFunctionStatementContext)_localctx).name = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(68);
				match(LEFT_PAREN);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(69);
					((FreeFunctionStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					((FreeFunctionStatementContext)_localctx).paramsNames.add(((FreeFunctionStatementContext)_localctx).IDENTIFIER);
					setState(70);
					match(COL);
					setState(71);
					((FreeFunctionStatementContext)_localctx).type = type();
					((FreeFunctionStatementContext)_localctx).paramsTypes.add(((FreeFunctionStatementContext)_localctx).type);
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(72);
						match(COMMA);
						setState(73);
						((FreeFunctionStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
						((FreeFunctionStatementContext)_localctx).paramsNames.add(((FreeFunctionStatementContext)_localctx).IDENTIFIER);
						setState(74);
						match(COL);
						setState(75);
						((FreeFunctionStatementContext)_localctx).type = type();
						((FreeFunctionStatementContext)_localctx).paramsTypes.add(((FreeFunctionStatementContext)_localctx).type);
						}
						}
						setState(80);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(83);
				match(RIGHT_PAREN);
				setState(84);
				match(ARROW);
				setState(85);
				((FreeFunctionStatementContext)_localctx).returnType = type();
				setState(86);
				((FreeFunctionStatementContext)_localctx).block = functionScope();
				}
				break;
			case 2:
				_localctx = new NativeFunctionStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PRIVATE || _la==PUBLIC) {
					{
					setState(88);
					((NativeFunctionStatementContext)_localctx).accessModifier = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==PRIVATE || _la==PUBLIC) ) {
						((NativeFunctionStatementContext)_localctx).accessModifier = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(91);
				match(NATIVE);
				setState(92);
				match(FN);
				setState(93);
				((NativeFunctionStatementContext)_localctx).name = match(IDENTIFIER);
				setState(94);
				match(LEFT_PAREN);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(95);
					((NativeFunctionStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					((NativeFunctionStatementContext)_localctx).paramsNames.add(((NativeFunctionStatementContext)_localctx).IDENTIFIER);
					setState(96);
					match(COL);
					setState(97);
					((NativeFunctionStatementContext)_localctx).type = type();
					((NativeFunctionStatementContext)_localctx).paramsTypes.add(((NativeFunctionStatementContext)_localctx).type);
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(98);
						match(COMMA);
						setState(99);
						((NativeFunctionStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
						((NativeFunctionStatementContext)_localctx).paramsNames.add(((NativeFunctionStatementContext)_localctx).IDENTIFIER);
						setState(100);
						match(COL);
						setState(101);
						((NativeFunctionStatementContext)_localctx).type = type();
						((NativeFunctionStatementContext)_localctx).paramsTypes.add(((NativeFunctionStatementContext)_localctx).type);
						}
						}
						setState(106);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(109);
				match(RIGHT_PAREN);
				setState(110);
				match(ARROW);
				setState(111);
				((NativeFunctionStatementContext)_localctx).returnType = type();
				setState(112);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
